src/styles/post-content.css
/* ... */
.post-content h3 + h3,
.post-content h3 + h4,
.post-content h3 + h6 {
    margin: var(--vr-2) 0 0;
}

.post-content h4 + h4,
.post-content h4 + h6 {
    margin: var(--vr-1) 0 0;
}

.post-content h5 + p,
.post-content h5 + ul,
.post-content h5 + ol,
.post-content h5 + blockquote {
    margin: var(--vr-6) 0 0;
}

.post-content h5 + h1,
.post-content h5 + h2,
.post-content h5 + h3,
.post-content h5 + h4,
.post-content h5 + h5,
.post-content h5 + h6 {
    margin: var(--vr-6) 0 0;
}

.post-content hr {
    position: relative;
    display: block;
    width: 100%;
    margin: var(--vr-8) 0 0;
    padding: 0;
    height: 1px;
    border: none;
    border-top: 1px solid var(--whitegrey);
}

.post-content hr + p,
.post-content hr + ul,
.post-content hr + ol,
.post-content hr + blockquote {
    margin: var(--vr-8) 0 0;
}

.post-content hr + h1,
.post-content hr + h2,
.post-content hr + h3,
.post-content hr + h4,
.post-content hr + h5,
.post-content hr + h6 {
    margin: var(--vr-6) 0 0;
}

/* Some grouped styles for smaller viewports */
@media (max-width: 500px) {
    .post-content hr {
        margin: var(--vr-6) 0 0;
    }

    .post-content hr + h1,
    .post-content hr + h2,
    .post-content hr + h3,
    .post-content hr + h4,
    .post-content hr + h5,
    .post-content hr + h6 {
        margin: var(--vr-4) 0 0;
    }
}

/* Non-text content */

.post-content figure + p,
.post-content figure + ul,
.post-content figure + ol,
.post-content figure + blockquote,
.post-content p + figure,
.post-content ul + figure,
.post-content ol + figure,
.post-content blockquote + figure,
.post-content h6 + figure,
.post-content pre + p,
.post-content pre + ul,
.post-content pre + ol,
.post-content pre + blockquote,
.post-content p + pre,
.post-content ul + pre,
.post-content ol + pre,
.post-content blockquote + pre,
.post-content h6 + pre,
.post-content div + p,
.post-content div + ul,
.post-content div + ol,
.post-content div + blockquote,
.post-content p + div,
.post-content ul + div,
.post-content ol + div,
.post-content blockquote + div,
.post-content h6 + div,
.post-content table + p,
.post-content table + ul,
.post-content table + ol,
.post-content table + blockquote,
.post-content p + table,
.post-content ul + table,
.post-content ol + table,
.post-content blockquote + table,
.post-content h6 + table {
    margin: var(--vr-4) 0 0;
}

.post-content figure + h1,
.post-content figure + h3,
.post-content figure + h4,
.post-content figure + h5,
.post-content figure + h6,
.post-content pre + h1,
.post-content pre + h3,
.post-content pre + h4,
.post-content pre + h5,
.post-content pre + h6,
.post-content div + h1,
.post-content div + h3,
.post-content div + h4,
.post-content div + h5,
.post-content div + h6,
.post-content table + h1,
.post-content table + h3,
.post-content table + h4,
.post-content table + h5,
.post-content table + h6 {
    margin: var(--vr-6) 0 0;
}

.post-content figure + h2,
.post-content pre + h2,
.post-content div + h2 {
    margin: var(--vr-10) 0 0;
}

.post-content h1 + figure,
.post-content h2 + figure,
.post-content h3 + figure,
.post-content h4 + figure,
.post-content h5 + figure,
.post-content h6 + figure,
.post-content h1 + pre,
.post-content h2 + pre,
.post-content h3 + pre,
.post-content h4 + pre,
.post-content h5 + pre,
.post-content h6 + pre,
.post-content h1 + div,
.post-content h2 + div,
.post-content h3 + div,
.post-content h4 + div,
.post-content h5 + div,
.post-content h6 + div,
.post-content h1 + table,
.post-content h2 + table,
.post-content h3 + table,
.post-content h4 + table,
.post-content h5 + table,
.post-content h6 + table {
    margin: var(--vr-2) 0;
}

/* Footnotes */
.footnotes-sep {
    margin-bottom: 30px;
}

.footnotes {
    font-size: 1.5rem;
}

.footnotes p {
    margin: 0;
}

.footnote-backref {
    color: var(--blue) !important;
    font-size: 1.2rem;
    font-weight: bold;
    text-decoration: none !important;
    box-shadow: none !important;
}

/* Some grouped styles for smaller viewports */
@media (max-width: 500px) {
    .post-meta {
        font-size: 1.2rem;
        line-height: 1.3em;
    }
    .post-title {
        font-size: 2.9rem;
    }
    .post-image {
        margin-bottom: 4vw;
        height: 350px;
    }
    .post-content {
        padding: 0;
    }
    .post-content:before,
    .post-content:after {
        display: none;
    }
}

/* Tables */
.post-content table {
    overflow-x: scroll;
    margin: var(--vr-4) 0 0;
    width: 100%;
    border-spacing: 0;
    border-collapse: collapse;
    font-size: 1.35rem;
    white-space: nowrap;
    vertical-align: top;
    -webkit-overflow-scrolling: touch;
    align-self: flex-start;
}

.post-content thead,
.post-content tbody {
    width: 100%;
}

.post-content tr:first-child td:first-child {
    border-top-left-radius: 4px;
}

.post-content th {
    color: var(--darkgrey);
    font-size: 1.35rem;
    line-height: 1em;
    font-weight: 600;
    letter-spacing: 0.2px;
    text-align: left;
    padding: 12px;
    border-bottom: 3px solid var(--whitegrey-l1);
}

.post-content td {
    padding: 14px 12px;
    text-align: left;
    line-height: 1.4em;
    vertical-align: middle;
    border-bottom: 1px solid var(--whitegrey-l1);
    border-right: 1px solid var(--whitegrey-l1);
}

.post-content td:last-child {
    border-right: none;
}

.post-content th:first-child,
.post-content td:first-child {
    text-align: left;
    padding-left: 0;
}

/* 7.6. Koenig Styles
/* ---------------------------------------------------------- */

.post-content .kg-image {
    max-width: 100%;
}

/* Preventing full-width image overlap with post image.  */
.post-image + .post-content .kg-content *:first-child .kg-image {
    width: 100%;
}

.post-content .kg-width-wide,
.post-content .kg-width-full {
    margin: var(--vr-4) -100% 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.post-content .kg-width-wide .kg-image {
    max-width: 1040px;
    width: 100vw;
}
/* ... */

